Added Rest assured dependencies and utilities for doing API testing.